--- a/style.css
+++ b/style.css
@@ -1,1 +1,29 @@
-d
+*, *::before, *::after {
+    box-sizing: border-box ;
+    padding: 0 ;
+    margin: 0 ; 
+}
+body {
+    background-image: url(./images/background.jpeg);
+    background-position-x: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    color: white;
+}
+form {
+    display: flex ;
+    flex-direction: column ;
+    align-items: center ;
+    justify-content: center ;
+    opacity: 0.9;
+    background-color: black;
+    aspect-ratio: 2/1;
+    height: auto;
+    padding: 20px;
+    border-radius: 10px;
+}
+img {
+    width: 1rem;
+}
