--- a/style.css
+++ b/style.css
@@ -19,11 +19,34 @@ form {
     justify-content: center ;
     opacity: 0.9;
     background-color: black;
-    aspect-ratio: 2/1;
-    height: auto;
+    width: 50vw;
     padding: 20px;
     border-radius: 10px;
 }
 img {
-    width: 1rem;
+    width: 2.2rem;
+    margin: 0.4rem;
+}
+input {
+    height: 1.75rem;
+    padding: 0.4rem;
+    border-radius: 4px;
+    border: none;
+    font-size: 1.3rem;
+    position: relative;
+    bottom: 15px;
+}
+div {
+    padding: 5px;
+    margin: 5px;
+}
+h1 {
+    margin-top: 1rem;
+    font-size: 2.75rem;
+}
+
+@media (min-width: 1750px) {
+    form {
+        width: 30vw;
+    }
 }
