--- a/style.css
+++ b/style.css
@@ -75,3 +75,13 @@ button {
         width: 90vw;
     }
 }
+#error-message > p {
+    color: red;
+}
+h2 {
+    font-size: 4rem;
+    color: rgb(255, 255, 255);
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.767);
+    padding: 1.5rem;
+}
